--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dullat.github.io/React-Store/home",
+  "homepage": "https://dullat.github.io/React-Store/",
   "name": "react-store",
   "private": true,
   "version": "0.0.0",
